Fixed the cart cards to be more responsive. They were too large on full screen/tablets

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -149,3 +149,9 @@ i.update-symbol {
     object-fit: cover;
   }
 }
+
+@media screen and (min-width: 950px) {
+  .cart-card {
+    width: 75%;
+  }
+}
